--- a/bsoft/protocols.conf
+++ b/bsoft/protocols.conf
@@ -16,7 +16,8 @@ Protocols SPA = [
 			{"tag": "section", "text": "more", "openItem": "False", "children": []}
 		]},
 		{"tag": "protocol_group", "text": "Preprocess", "openItem": "False", "children": []},
-		{"tag": "protocol_group", "text": "Filter", "openItem": "False", "children": []},
+		{"tag": "protocol_group", "text": "Filter", "openItem": "False", "children": [
+		{"tag": "protocol", "value": "BsoftProtBfilter", "text": "default"}]},
 		{"tag": "protocol_group", "text": "Mask", "openItem": "False", "children": []}
 	]},
 	{"tag": "section", "text": "2D", "children": [
@@ -42,7 +43,7 @@ Protocols SPA = [
 			{"tag": "section", "text": "Heterogeneity", "openItem": "False", "children": []},
 			{"tag": "section", "text": "Validation", "openItem": "False", "children": []},
 			{"tag": "section", "text": "Resolution", "openItem": "False", "children": [
-			{"tag": "protocol", "value": "BsoftProtBfilter", "text": "default"}]},
+			{"tag": "protocol", "value": "BsoftProtBlocres", "text": "default"}]},
 			{"tag": "section", "text": "more", "openItem": "False", "children": []}
 		]},
 		{"tag": "protocol_group", "text": "Reconstruct", "openItem": "False", "children": []}
